overflow fixed to price and note blocks in extra block in catalog pages

--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -46,6 +46,14 @@
   padding-left: 0;
 }
 
+.extra__price,
+.extra__name,
+.extra__title {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
 .extra__title {
   font-size: 16px;
   font-weight: 400;
@@ -56,6 +64,11 @@
 
 .extra__button {
   margin-bottom: 20px;
+}
+
+.extra__price {
+  width: 70px;
+  text-align: right;
 }
 
 .extra__name,
@@ -105,6 +118,7 @@
 
   .extra__title {
     font-size: 20px;
+    max-width: 245px;
   }
 
   .extra__button {
